# protobuf_bench

./: Cargo.toml  build.rs
benches/: serialization.rs
src/: main.rs
src/protos/: benchmark.proto  mod.rs
