[package]
name = "protobuf_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = { version = "3.4", features = ["bytes"] }
prost = "0.12.4"
prost-derive = "0.12.4"
quick-protobuf = "0.8.1"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
protobuf-codegen = "3.4"  # or the latest version
prost-build = "0.12.4"
quick-protobuf = "0.8.1"
pb-rs = "0.9.1"

[patch.crates-io]
#protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
#protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }

[[bench]]
name = "serialization"
harness = false
